# bilevel-gait-gen

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  a1_config_distr_rejection.yaml  a1_configuration.yaml  a1_gait_opt_config.yaml  adam_configuration.yaml  adam_sim_feet.yaml  demo.cpp  mpc_demo.cpp  mpc_sim_demo.cpp
controllers/: CMakeLists.txt  controller.cpp  mpc_controller.cpp  pd_grav_comp.cpp  qp_control.cpp
controllers/include/: controller.h  mpc_controller.h  pd_grav_comp.h  qp_control.h
hardware/: CMakeLists.txt  hardware_a1_config.yaml  hardware_interface.cpp  hardware_robot.cpp  optitrack_client.cpp
hardware/include/: hardware_robot.h
hardware/unitree_lib/: udp.h
include/: config_parser.h
models/a1_description/xml/: a1.xml
models/adam/: adam.urdf  adam.xml  adam_feet_basic.xml  adam_feet_cassie_250.xml
models/adam/meshes/: foot_basic.STL  foot_cassie.STL  forearm.STL  left_hip_roll.STL  left_upper_arm.STL  right_hip_roll.STL  right_upper_arm.STL  shin_basic.STL  shin_cassie_250.STL  shin_cassie_270.STL  torso.STL
models/mini_cheetah/: mini_cheetah_mesh.urdf
mpc/: CMakeLists.txt  centroidal_model.cpp  end_effector_splines.cpp  euler_integrator.cpp  gait_optimizer.cpp  inputs.cpp  integrator.cpp  model.cpp  mpc.cpp  mpc_centroidal.cpp  mpc_single_rigid_body.cpp  osqp_interface.cpp  qp_data.cpp  qp_interface.cpp  rk_integrator.cpp  single_rigid_body_model.cpp  spline.cpp  spline_node.cpp  trajectory.cpp
mpc/include/: centroidal_model.h  end_effector_splines.h  euler_integrator.h  gait_optimizer.h  inputs.h  integrator.h  model.h  mpc.h  mpc_centroidal.h  mpc_single_rigid_body.h  osqp_interface.h  qp_data.h  qp_interface.h  rk_integrator.h  single_rigid_body_model.h  spline.h  spline_node.h  trajectory.h
mpc/include/models/: centroidal_model.h  model.h  single_rigid_body_model.h
mpc/include/qp/: clarabel_interface.h  osqp_interface.h  qp_data.h  qp_interface.h  qp_partials.h
mpc/include/spline/: end_effector_splines.h  spline.h  spline_node.h
mpc/models/: centroidal_model.cpp  model.cpp  single_rigid_body_model.cpp
mpc/qp/: clarabel_interface.cpp  osqp_interface.cpp  qp_data.cpp  qp_interface.cpp
mpc/spline/: end_effector_splines.cpp  spline.cpp  spline_node.cpp
simulation/: CMakeLists.txt  controller.cpp  glfw_corevideo.mm  pd_grav_comp.cpp  qp_control.cpp  simple_simulation.cpp  simulate.cc  simulation_robot.cpp  simulator.cpp  visualization.cpp
simulation/include/: controller.h  pd_grav_comp.h  qp_control.h  simple_simulation.h  simulate.h  simulation_robot.h  simulator.h  visualization.h
simulation/mujoco_sim/: simulate.cc  simulator.cpp
src/: CMakeLists.txt  config_parser.cpp
test/: CMakeLists.txt  a1_configuration.yaml  a1_configuration_test.yaml  controller_test.cpp  gait_opt_line_search.cpp  gait_opt_playground.cpp  mpc_test.cpp  simulation_mpc.cpp  simulator_test.cpp  splines_tests.cpp  test_config.yaml
utils/: CMakeLists.txt  config_parser.cpp  logger.cpp  sparse_matrix_builder.cpp  timer.cpp
utils/include/: config_parser.h  logger.h  sparse_matrix_builder.h  timer.h
